# kotlin-ktor-bazel-hello-world

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  maven_install.json
service/app/public/api/: BUILD.bazel
service/app/public/api/src/main/kotlin/: Main.kt
service/app/public/api/src/main/resources/: application.conf
