load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "define_kt_toolchain")
load("@rules_jvm_external//:defs.bzl", "artifact")

exports_files([
    ".env",
#    "google_credentials.json"
])

KOTLIN_LANGUAGE_LEVEL = "1.3"
JAVA_LANGUAGE_LEVEL = "11"

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = KOTLIN_LANGUAGE_LEVEL,  # "1.1", "1.2", or "1.3"
    jvm_target = JAVA_LANGUAGE_LEVEL, # "1.6", "1.8", "9", "10", "11", or "12",
    language_version = KOTLIN_LANGUAGE_LEVEL,  # "1.1", "1.2", or "1.3"
)
